# paymet-analysis

./: .gitignore  AGENTS.md  DATA_FLOW.md  EXECUTIVE_SUMMARY.md  README.md  TECHNICAL_DOCUMENTATION.md  TESTING_REPORT.md  app.py  app.yaml  app.yml  components.json  databricks.yml  package.json  pyproject.toml  requirements.txt  tsconfig.json  vite.config.ts
.claude/skills/apx/: SKILL.md
.cursor/: AGENT_CONTEXT.md  MCP.md  mcp.json
.cursor/rules/: project.mdc
docs/: 0_BUSINESS_CHALLENGES.md  0_EXECUTIVE_OVERVIEW.md  1_DEPLOYMENTS.md  1_DEPLOYMENT_GUIDE.md  2_DATA_FLOW.md  2_DATA_FLOW_SUMMARY.md  3_AGENTS_VALUE.md  3_AI_AGENTS_GUIDE.md  4_TECHNICAL.md  4_TECHNICAL_DETAILS.md  5_DEMO_SETUP.md  AGENT_FRAMEWORK_DATABRICKS.md  ARCHITECTURE_REFERENCE.md  BEST_PRACTICES_ALIGNMENT.md  BUSINESS_AND_SOLUTION.md  BUSINESS_REQUIREMENTS.md  CONTROL_PANEL_UI.md  DASHBOARD_PARAMETERIZATION_FIX.md  DATABRICKS.md  DATA_FLOW_AND_INTELLIGENCE.md  DATA_SOURCES.md  DEMO_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  E2E_VERIFICATION.md  GUIDE.md  INDEX.md  OVERVIEW.md  QA_REPORT_DEPLOYED_APP.md  README.md  REFERENCE.md  RESOURCES_BUILT.md  SCHEMA_TABLES_VIEWS.md  TECHNICAL.md  TECHNICAL_GUIDE.md  UI_BACKEND_DATABRICKS_WIRING.md  UI_VERIFICATION.md  VERSION_ALIGNMENT.md
resources/: agents.yml  ai_gateway.yml  app.yml  dashboards.yml  fastapi_app.yml  genie_spaces.yml  lakebase.yml  ml_jobs.yml  model_serving.yml  pipelines.yml  sql_warehouse.yml  streaming_simulator.yml  unity_catalog.yml  vector_search.yml
resources/dashboards/: README.md  authentication_security.lvdash.json  daily_trends.lvdash.json  data_quality_unified.lvdash.json  decline_analysis.lvdash.json  executive_overview.lvdash.json  executive_trends_unified.lvdash.json  financial_impact.lvdash.json  fraud_risk_analysis.lvdash.json  global_coverage.lvdash.json  merchant_performance.lvdash.json  ml_optimization_unified.lvdash.json  performance_latency.lvdash.json  realtime_monitoring.lvdash.json  routing_optimization.lvdash.json  streaming_data_quality.lvdash.json
routes/: __init__.py
routes/v1/: __init__.py  healthcheck.py
scripts/: README.md  bundle.sh  create_lakebase_autoscaling.py  dashboards.py  deploy.sh  deploy_with_dependencies.sh  ensure_dashboards.sh  fix_dashboard_parameters.py  manage_uc_functions.py  pre_deploy_check.py  prepare_dashboards.py  publish_dashboards.py  qa_comprehensive_deep.py  qa_deployed_comprehensive.py  qa_retry_failed.py  qa_skeleton_pages_20s.py  qa_specific_flows.py  resolve_bundle_schema.py  run_and_validate_jobs.py  substitute_dashboard_vars.py  sync_requirements_from_lock.py  test_deployed_app.py  toggle_app_resources.py  update_dashboards_corrected.py  validate_bundle.sh  validate_dashboard_assets.py  verify_all.sh  verify_dashboard_ids.py  verify_versions.py
src/payment_analysis/: __init__.py
src/payment_analysis/agents/: __init__.py  agent.py  agent_framework.py  agentbricks_register.py  langgraph_agents.py  register_responses_agent.py
src/payment_analysis/agents/uc_tools/: create_uc_agent_tools.py  run_create_uc_agent_tools.py  uc_agent_tools.sql
src/payment_analysis/backend/: app.py  config.py  databricks_client_helpers.py  db_models.py  dependencies.py  lakebase_config.py  lakebase_helpers.py  logger.py  mock_analytics.py  models.py  router.py  runtime.py  utils.py
src/payment_analysis/backend/decisioning/: __init__.py  engine.py  policies.py  rule_engine.py  schemas.py
src/payment_analysis/backend/routes/: __init__.py  agents.py  analytics.py  dashboards.py  decision.py  decision_admin.py  experiments.py  incidents.py  notebooks.py  notifications.py  rules.py  setup.py
src/payment_analysis/backend/services/: __init__.py  databricks_service.py
src/payment_analysis/dashboards/: decline_analysis.lvdash.json  financial_impact.lvdash.json  fraud_risk_analysis.lvdash.json  performance_latency.lvdash.json  realtime_monitoring.lvdash.json  routing_optimization.lvdash.json  streaming_data_quality.lvdash.json
src/payment_analysis/genie/: __init__.py  sync_genie_space.py
src/payment_analysis/ml/: __init__.py  train_models.py
src/payment_analysis/streaming/: __init__.py  bronze_ingest.py  continuous_processor.py  realtime_pipeline.py  transaction_simulator.py
src/payment_analysis/transform/: __init__.py  approval_rules.sql  gold_views.py  gold_views.sql  lakehouse_bootstrap.sql  online_features.sql  publish_dashboards.py  run_create_lakebase_autoscaling.py  run_create_uc_agent_tools.py  run_ensure_catalog_schema.py  run_gold_views.py  run_lakebase_data_init.py  run_lakehouse_bootstrap.py  run_validate_all.py  silver_transform.py  unity_catalog_setup.sql  vector_search_and_recommendations.sql
src/payment_analysis/ui/: index.html  main.tsx
src/payment_analysis/ui/config/: countries.ts  ui-reference.ts  workspace.ts
src/payment_analysis/ui/lib/: api.ts  mock-data.ts  (+5 more)
src/payment_analysis/vector_search/: create_index.py
state/: deployment.json  metadata.json  terraform.tfstate
(+65 files in other folders)
