[project]
# Pinned versions for Databricks App compatibility (single source of truth).
# Keep exactly the same versions in: resources/ml_jobs.yml (job env), run_*_lakebase*.py (%pip), requirements.txt (from uv.lock via scripts/sync_requirements_from_lock.py). Do not change.
name = "payment-analysis"
dynamic = ["version"]
description = "Payment approval rate optimization platform on Databricks — streaming analytics, ML models, and AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "databricks-sdk==0.86.0",
    "fastapi==0.128.7",
    "psycopg[binary,pool]==3.3.2",
    "pydantic-settings==2.12.0",
    "sqlmodel==0.0.32",
    "uvicorn==0.40.0",
]

[dependency-groups]
dev = [
    "ty==0.0.15",
    "apx==0.2.6",
]

[tool.apx.metadata]
app-name = "payment-analysis"
app-slug = "payment_analysis"
app-entrypoint = "payment_analysis.backend.app:app"
api-prefix = "/api"
metadata-path = "src/payment_analysis/_metadata.py"

[tool.apx.ui]
root = "src/payment_analysis/ui"

[tool.apx.ui.registries]
"@animate-ui" = "https://animate-ui.com/r/{name}.json"
"@ai-elements" = "https://registry.ai-sdk.dev/{name}.json"
"@svgl" = "https://svgl.app/r/{name}.json"

[build-system]
requires = ["hatchling==1.28.0", "uv-dynamic-versioning==0.13.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
fallback-version = "0.0.0"

[tool.uv]

[[tool.uv.index]]
name = "apx-index"
url = "https://databricks-solutions.github.io/apx/simple"

[tool.uv.sources]

[tool.uv.sources.apx]
index = "apx-index"

[tool.hatch.build.hooks.version]
path = "src/payment_analysis/_version.py"
template = '''
version = "{version}"
'''

[tool.hatch.build]
artifacts = ["src/payment_analysis/__dist__", "src/payment_analysis/_metadata.py"]
exclude = ["src/payment_analysis/ui"]

# Exclude Databricks-only notebooks from type checking (dbutils, spark, Lakeflow are runtime-injected)
# Exclude files/ (bundle sync copy) so ty only checks src/ and resolves imports correctly
# Exclude LangGraph/UC agent code (Databricks-only: spark/dbutils or optional deps)
[tool.ty.src]
exclude = [
    "files/**",
    "src/payment_analysis/agents/langgraph_agents.py",
    "src/payment_analysis/agents/uc_tools/run_create_uc_agent_tools.py",
    "src/payment_analysis/genie/**",
    "src/payment_analysis/ml/**",
    "src/payment_analysis/streaming/**",
    "src/payment_analysis/transform/**",
]
